2009-02-16  Scott Ellington  <scott.ellington@gmail.com>

	* Main.cs: use generic type methods

2009-02-10  Scott Ellington  <scott.ellington@gmail.com>

	* ChangeLog: add ChangeLogs
